--- a/FlappyFabian/app/src/main/AndroidManifest.xml
+++ b/FlappyFabian/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         <activity
             android:name=".Help"
             android:label="@string/title_activity_help"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
+
